# ChangeLog for net-firewall/firestorm
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/firestorm/ChangeLog,v 1.7 2004/07/01 22:14:20 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  firestorm-0.5.2.ebuild, firestorm-0.5.4.ebuild:
  virtual/glibc -> virtual/libc

  30 Apr 2004; David Holm <dholm@gentoo.org> firestorm-0.5.4.ebuild:
  Added to ~ppc.

  16 Apr 2004; Michael McCabe <randy@gentoo.org> firestorm-0.5.4.ebuild:
  adding s390 keywords

*firestorm-0.5.4 (31 Mar 2004)

  31 Mar 2004; Michael Boman <mboman@gentoo.org> firestorm-0.5.4.ebuild:
  New upstream version. Closes 46032.

*firestorm-0.5.2 (12 May 2003)

  12 May 2003; Martin Holzer <mholzer@gentoo.org> firestorm-0.5.2.ebuild:
  Initial Version. Ebuild submitted by Dmitry Platonov <shadowjack@mail.ru>
  in #20534.